--- a/SISMistico/CapaPresentacion/ReportesFacturas/Comandas/ComandasPedido.rdlc
+++ b/SISMistico/CapaPresentacion/ReportesFacturas/Comandas/ComandasPedido.rdlc
@@ -127,7 +127,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Restaurante Tío PEPE - Comanda</Value>
+                    <Value>Restaurante Casa Grande - Comanda</Value>
                     <Style>
                       <FontFamily>Segoe UI</FontFamily>
                       <FontSize>12pt</FontSize>
