--- a/SISMistico/CapaPresentacion/Formularios/FormsEstadisticas/rptReporteDiario.rdlc
+++ b/SISMistico/CapaPresentacion/Formularios/FormsEstadisticas/rptReporteDiario.rdlc
@@ -301,7 +301,7 @@
                 <Paragraph>
                   <TextRuns>
                     <TextRun>
-                      <Value>SISTEMA DE CONTROL RESTAURANTE TÍO PEPE - REPORTE DIARIO</Value>
+                      <Value>SISTEMA DE CONTROL RESTAURANTE CASA GRANDE - REPORTE DIARIO</Value>
                       <Style>
                         <FontFamily>Segoe UI</FontFamily>
                         <FontSize>12pt</FontSize>
