--- a/SISMistico/CapaPresentacion/ReportesFacturas/NominaEmpleado/rptNominaEmpleado.rdlc
+++ b/SISMistico/CapaPresentacion/ReportesFacturas/NominaEmpleado/rptNominaEmpleado.rdlc
@@ -149,7 +149,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Nit 1037646184</Value>
+                    <Value>Nit 1053803248-1</Value>
                     <Style>
                       <FontFamily>Segoe UI</FontFamily>
                       <FontSize>8pt</FontSize>
@@ -194,7 +194,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Dirección Carrera 11 Calle 18 Esquina # 11 - 09 </Value>
+                    <Value>Dirección Calle 65 A# 23 B 40 </Value>
                     <Style>
                       <FontFamily>Segoe UI</FontFamily>
                       <FontSize>8pt</FontSize>
@@ -209,7 +209,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Barrio campo hermoso -  3115747901</Value>
+                    <Value>Barrio palermo - 3045401462 - 8875609 - 8909664</Value>
                     <Style>
                       <FontFamily>Segoe UI</FontFamily>
                       <FontSize>8pt</FontSize>
