--- a/SISMistico/CapaPresentacion/ReportesFacturas/Comandas/ComandasPedido.rdlc
+++ b/SISMistico/CapaPresentacion/ReportesFacturas/Comandas/ComandasPedido.rdlc
@@ -177,7 +177,7 @@
             <Top>0.77639cm</Top>
             <Left>0.01999cm</Left>
             <Height>0.30897cm</Height>
-            <Width>7.8cm</Width>
+            <Width>4.01646cm</Width>
             <ZIndex>1</ZIndex>
             <Style>
               <Border>
@@ -391,7 +391,7 @@
                   </TextRun>
                 </TextRuns>
                 <Style>
-                  <TextAlign>Left</TextAlign>
+                  <TextAlign>Right</TextAlign>
                 </Style>
               </Paragraph>
             </Paragraphs>
@@ -643,11 +643,45 @@
               <PaddingBottom>2pt</PaddingBottom>
             </Style>
           </Textbox>
+          <Textbox Name="txtFechaHora4">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>="Comanda #" &amp; Parameters!NumeroComanda.Value</Value>
+                    <Style>
+                      <FontFamily>Segoe UI</FontFamily>
+                      <FontWeight>SemiBold</FontWeight>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style>
+                  <TextAlign>Right</TextAlign>
+                </Style>
+              </Paragraph>
+            </Paragraphs>
+            <Top>0.74112cm</Top>
+            <Left>4.10701cm</Left>
+            <Height>0.30897cm</Height>
+            <Width>3.78354cm</Width>
+            <ZIndex>14</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
         </ReportItems>
         <Height>4.92407cm</Height>
         <Style />
       </Body>
-      <Width>7.81999cm</Width>
+      <Width>7.89055cm</Width>
       <Page>
         <PageHeight>29.7cm</PageHeight>
         <PageWidth>21cm</PageWidth>
@@ -671,6 +705,12 @@
       <DataType>String</DataType>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
+    <ReportParameter Name="NumeroComanda">
+      <DataType>String</DataType>
+      <Nullable>true</Nullable>
+      <AllowBlank>true</AllowBlank>
+      <Prompt>ReportParameter1</Prompt>
+    </ReportParameter>
   </ReportParameters>
   <ReportParametersLayout>
     <GridLayoutDefinition>
@@ -686,6 +726,11 @@
           <ColumnIndex>1</ColumnIndex>
           <RowIndex>0</RowIndex>
           <ParameterName>parameterHora</ParameterName>
+        </CellDefinition>
+        <CellDefinition>
+          <ColumnIndex>2</ColumnIndex>
+          <RowIndex>0</RowIndex>
+          <ParameterName>NumeroComanda</ParameterName>
         </CellDefinition>
       </CellDefinitions>
     </GridLayoutDefinition>
