--- a/SISMistico/CapaPresentacion/ReportesFacturas/FacturaFinal/Precuenta.rdlc
+++ b/SISMistico/CapaPresentacion/ReportesFacturas/FacturaFinal/Precuenta.rdlc
@@ -127,7 +127,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Restaurante Casa Grande</Value>
+                    <Value>Restaurante Casa Grande - Precuenta</Value>
                     <Style>
                       <FontFamily>Segoe UI</FontFamily>
                       <FontSize>12pt</FontSize>
@@ -236,7 +236,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>MANIZALES</Value>
+                    <Value>MANIZALESP</Value>
                     <Style>
                       <FontFamily>Segoe UI</FontFamily>
                       <FontSize>8pt</FontSize>
